<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_SequenceCONVEY_EXTEND" Id="{e74c6269-e840-4ed5-89d5-6ab4f78ed580}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SequenceCONVEY_EXTEND EXTENDS FB_SequenceBase



VAR_IN_OUT
	devices: ST_POPComponents;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{33647c2d-6788-4a46-b51f-538e4beaccd1}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)
sSequenceName:= 'POP Conveyor Forward Sequence';
sSequenceDescription := 'Performs the full forward series of actions (starting with tray on static conveyors then lowering onto TRT';
bSequentional_1_Flood_0 := TRUE;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="populateSteps" Id="{7cf7fbfe-523a-43e8-9c1b-cb1ec12d4d25}">
      <Declaration><![CDATA[METHOD populateSteps : ST_SequenceStep
VAR_INPUT
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
		Here we set the order of things to command, what the commands should be, and also how much time to allow during and between steps
		Every component listed below becomes 'Enabled' at each step
*)


Step1.Device := devices.fbTrayCentre_POP1;
Step1.Command := E_DeviceState.RETRACTED;
Step1.StepMinDuration := T#0S;
Step1.DelayUntilNextStep := T#0S;
Step1.WaitForAction := FALSE;
aSequenceSteps[1] :=   Step1;

Step2.Device := devices.fbTrayCentre_POP2;
Step2.Command := E_DeviceState.RETRACTED;
Step2.StepMinDuration := T#0S;
Step2.DelayUntilNextStep := T#0S;
Step2.WaitForAction := FALSE;
aSequenceSteps[2] :=   Step2;

Step3.Device := devices.fbTrayCentre_POP3;
Step3.Command := E_DeviceState.RETRACTED;
Step3.StepMinDuration := T#0S;
Step3.DelayUntilNextStep := T#0S;
Step3.WaitForAction := TRUE;
aSequenceSteps[3] :=   Step3;

Step4.Device := devices.fbStaticConv_POP1;
Step4.Command := E_DeviceState.RUNNING;
Step4.StepMinDuration := T#0S;
Step4.DelayUntilNextStep := T#0S;
Step4.WaitForAction := FALSE;
aSequenceSteps[4] :=   Step4;


Step5.Device := devices.fbStaticConv_POP2;
Step5.Command := E_DeviceState.RUNNING;
Step5.StepMinDuration := T#0S;
Step5.DelayUntilNextStep := T#0S;
Step5.WaitForAction := FALSE;
aSequenceSteps[5] :=   Step5;

Step6.Device := devices.fbStaticConv_POP3;
Step6.Command := E_DeviceState.RUNNING;
Step6.StepMinDuration := T#0S;
Step6.DelayUntilNextStep := T#0S;
Step6.WaitForAction := FALSE;
aSequenceSteps[6] :=   Step9;

Step10.Device := devices.fbTrayEndSensor;
Step10.Command := E_DeviceState.ON;
Step10.StepMinDuration := T#0S;
Step10.DelayUntilNextStep := T#0S;
Step10.WaitForAction := TRUE;
aSequenceSteps[10] :=   Step10;



Step11.Device := devices.fbLinAct_POP1;
Step11.Command := E_DeviceState.RETRACTED;
Step11.StepMinDuration := T#0S; 
Step11.DelayUntilNextStep := T#0S;
Step11.WaitForAction := FALSE;
aSequenceSteps[11] :=   Step11;

Step12.Device := devices.fbLinAct_POP2;
Step12.Command := E_DeviceState.RETRACTED;
Step12.StepMinDuration := T#0S; 
Step12.DelayUntilNextStep := T#0S;
Step12.WaitForAction := FALSE;
aSequenceSteps[12] :=   Step12;

Step13.Device := devices.fbLinAct_POP3;
Step13.Command := E_DeviceState.RETRACTED;
Step13.StepMinDuration := T#0S; 
Step13.DelayUntilNextStep := T#0S;
Step13.WaitForAction := FALSE;
aSequenceSteps[13] :=   Step13;


Step14.Device := devices.fbTrayEndSensor;
Step14.Command := E_DeviceState.OFF;
Step14.StepMinDuration := T#0S; 
Step14.DelayUntilNextStep := T#0S;
Step14.WaitForAction := TRUE;
aSequenceSteps[14] :=   Step14;


nNumberSequenceSteps := 14;  // use this number to limit the number of operations
updateVarIDs();

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_SequenceCONVEY_EXTEND">
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceCONVEY_EXTEND.FB_init">
      <LineId Id="10" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="97" Count="0" />
    </LineIds>
    <LineIds Name="FB_SequenceCONVEY_EXTEND.populateSteps">
      <LineId Id="472" Count="3" />
      <LineId Id="579" Count="0" />
      <LineId Id="600" Count="49" />
      <LineId Id="688" Count="0" />
      <LineId Id="692" Count="0" />
      <LineId Id="650" Count="33" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>